--- a/.gitignore
+++ b/.gitignore
@@ -1,34 +1,187 @@
-CIFNO  |ACCTNO |FeeDescription                  |FeeCode|Istransactional|FeeType          |FeeAmount|Frequency                                    |Branch City|Branch State|OfficerId|Officer                       |StandardException|Default Fee Package Id|Default Fee Package|Default Fee Amount|Default Frequency                            |
--------+-------+--------------------------------+-------+---------------+-----------------+---------+---------------------------------------------+-----------+------------+---------+------------------------------+-----------------+----------------------+-------------------+------------------+---------------------------------------------+
-F016583|7113617|Safekeeping of Securities       |BPS002 |              0|Individual Fees  |         |0.35% /YR min $375.00/QTR                    |New York   |NY          |369      |Mordekhai Aghai           BR 7|Standard         |                     2|Domestic Individual|                  |0.35% /YR min $375.00/QTR                    |
-F016583|7113617|SSL Account Maintanance Fee     |BPS003 |              0|Individual Fees  |   375.00|Quarterly on Day 1                           |New York   |NY          |369      |Mordekhai Aghai           BR 7|Standard         |                     2|Domestic Individual|            375.00|Quarterly on Day 1                           |
-F016583|7113617|US Equities Commission          |BPS004 |              1|Individual Fees  |         |$0.10 per share, min charge of $150 per trade|New York   |NY          |369      |Mordekhai Aghai           BR 7|Standard         |                     2|Domestic Individual|                  |$0.10 per share, min charge of $150 per trade|
-F016583|7113617|Options Commission              |BPS005 |              1|Individual Fees  |         |$0.10 per share, min charge of $150 per trade|New York   |NY          |369      |Mordekhai Aghai           BR 7|Standard         |                     2|Domestic Individual|                  |$0.10 per share, min charge of $150 per trade|
-F016583|7113617|Account Maintenance Fee         |JH001  |              0|Client Fees      |     0.00|                                             |New York   |NY          |369      |Mordekhai Aghai           BR 7|Exception        |                     2|Domestic Individual|             25.00|Monthly - Charged Quarterly                  |
-F016583|7113617|Hold Mail Fee                   |JH002  |              0|Client Fees      |     0.00|Annual - Charged Annual                      |New York   |NY          |369      |Mordekhai Aghai           BR 7|Standard         |                     2|Domestic Individual|              0.00|Annual - Charged Annual                      |
-F016583|7113617|FX Outgoing Wire Fee            |JH006  |              1|Bank Account Fees|     0.00|                                             |New York   |NY          |369      |Mordekhai Aghai           BR 7|Exception        |                     2|Domestic Individual|             25.00|                                             |
-F016583|7113617|FX Outgoing Wire (SafraLink) Fee|JH007  |              1|Bank Account Fees|    10.00|                                             |New York   |NY          |369      |Mordekhai Aghai           BR 7|Standard         |                     2|Domestic Individual|             10.00|                                             |
-F016583|7115342|Safekeeping of Securities       |BPS002 |              0|Individual Fees  |         |0.35% /YR min $375.00/QTR                    |New York   |NY          |369      |Mordekhai Aghai           BR 7|Standard         |                     2|Domestic Individual|                  |0.35% /YR min $375.00/QTR                    |
-F016583|7115342|SSL Account Maintanance Fee     |BPS003 |              0|Individual Fees  |   375.00|Quarterly on Day 1                           |New York   |NY          |369      |Mordekhai Aghai           BR 7|Standard         |                     2|Domestic Individual|            375.00|Quarterly on Day 1                           |
-F016583|7115342|US Equities Commission          |BPS004 |              1|Individual Fees  |         |$0.10 per share, min charge of $150 per trade|New York   |NY          |369      |Mordekhai Aghai           BR 7|Standard         |                     2|Domestic Individual|                  |$0.10 per share, min charge of $150 per trade|
-F016583|7115342|Options Commission              |BPS005 |              1|Individual Fees  |         |$0.10 per share, min charge of $150 per trade|New York   |NY          |369      |Mordekhai Aghai           BR 7|Standard         |                     2|Domestic Individual|                  |$0.10 per share, min charge of $150 per trade|
-F016583|7115342|Options Commission              |BPS005 |              1|Individual Fees  |         |$0.10 per share, min charge of $150 per trade|New York   |NY          |369      |Mordekhai Aghai           BR 7|Standard         |                     2|Domestic Individual|                  |$0.10 per share, min charge of $150 per trade|
-F016583|7115342|Account Maintenance Fee         |JH001  |              0|Client Fees      |    25.00|Monthly - Charged Quarterly                  |New York   |NY          |369      |Mordekhai Aghai           BR 7|Standard         |                     2|Domestic Individual|             25.00|Monthly - Charged Quarterly                  |
-F016583|7115342|Hold Mail Fee                   |JH002  |              0|Client Fees      |     0.00|Annual - Charged Annual                      |New York   |NY          |369      |Mordekhai Aghai           BR 7|Standard         |                     2|Domestic Individual|              0.00|Annual - Charged Annual                      |
-F016583|7115342|FX Outgoing Wire Fee            |JH006  |              1|Bank Account Fees|    25.00|                                             |New York   |NY          |369      |Mordekhai Aghai           BR 7|Standard         |                     2|Domestic Individual|             25.00|                                             |
-F016583|7115342|FX Outgoing Wire (SafraLink) Fee|JH007  |              1|Bank Account Fees|    10.00|                                             |New York   |NY          |369      |Mordekhai Aghai           BR 7|Standard         |                     2|Domestic Individual|             10.00|                                             |
-F016583|7115431|Safekeeping of Securities       |BPS002 |              0|Individual Fees  |         |0.35% /YR min $375.00/QTR                    |New York   |NY          |369      |Mordekhai Aghai           BR 7|Standard         |                     2|Domestic Individual|                  |0.35% /YR min $375.00/QTR                    |
-F016583|7115431|SSL Account Maintanance Fee     |BPS003 |              0|Individual Fees  |   375.00|Quarterly on Day 1                           |New York   |NY          |369      |Mordekhai Aghai           BR 7|Standard         |                     2|Domestic Individual|            375.00|Quarterly on Day 1                           |
-F016583|7115431|US Equities Commission          |BPS004 |              1|Individual Fees  |         |$0.10 per share, min charge of $150 per trade|New York   |NY          |369      |Mordekhai Aghai           BR 7|Standard         |                     2|Domestic Individual|                  |$0.10 per share, min charge of $150 per trade|
-F016583|7115431|Options Commission              |BPS005 |              1|Individual Fees  |         |$0.10 per share, min charge of $150 per trade|New York   |NY          |369      |Mordekhai Aghai           BR 7|Standard         |                     2|Domestic Individual|                  |$0.10 per share, min charge of $150 per trade|
-F016583|7115431|Account Maintenance Fee         |JH001  |              0|Client Fees      |    25.00|Monthly - Charged Quarterly                  |New York   |NY          |369      |Mordekhai Aghai           BR 7|Standard         |                     2|Domestic Individual|             25.00|Monthly - Charged Quarterly                  |
-F016583|7115431|Hold Mail Fee                   |JH002  |              0|Client Fees      |     0.00|Annual - Charged Annual                      |New York   |NY          |369      |Mordekhai Aghai           BR 7|Standard         |                     2|Domestic Individual|              0.00|Annual - Charged Annual                      |
-F016583|7115431|FX Outgoing Wire Fee            |JH006  |              1|Bank Account Fees|    25.00|                                             |New York   |NY          |369      |Mordekhai Aghai           BR 7|Standard         |                     2|Domestic Individual|             25.00|                                             |
-F016583|7115431|FX Outgoing Wire (SafraLink) Fee|JH007  |              1|Bank Account Fees|    10.00|                                             |New York   |NY          |369      |Mordekhai Aghai           BR 7|Standard         |                     2|Domestic Individual|             10.00|                                             |
-F016583|7115822|Safekeeping of Securities       |BPS002 |              0|Individual Fees  |         |0.35% /YR min $375.00/QTR                    |New York   |NY          |369      |Mordekhai Aghai           BR 7|Standard         |                     2|Domestic Individual|                  |0.35% /YR min $375.00/QTR                    |
-F016583|7115822|SSL Account Maintanance Fee     |BPS003 |              0|Individual Fees  |   375.00|Quarterly on Day 1                           |New York   |NY          |369      |Mordekhai Aghai           BR 7|Standard         |                     2|Domestic Individual|            375.00|Quarterly on Day 1                           |
-F016583|7115822|US Equities Commission          |BPS004 |              1|Individual Fees  |         |$0.10 per share, min charge of $150 per trade|New York   |NY          |369      |Mordekhai Aghai           BR 7|Standard         |                     2|Domestic Individual|                  |$0.10 per share, min charge of $150 per trade|
-F016583|7115822|Account Maintenance Fee         |JH001  |              0|Client Fees      |    25.00|Monthly - Charged Quarterly                  |New York   |NY          |369      |Mordekhai Aghai           BR 7|Standard         |                     2|Domestic Individual|             25.00|Monthly - Charged Quarterly                  |
-F016583|7115822|Hold Mail Fee                   |JH002  |              0|Client Fees      |     0.00|Annual - Charged Annual                      |New York   |NY          |369      |Mordekhai Aghai           BR 7|Standard         |                     2|Domestic Individual|              0.00|Annual - Charged Annual                      |
-F016583|7115822|FX Outgoing Wire Fee            |JH006  |              1|Bank Account Fees|     0.00|                                             |New York   |NY          |369      |Mordekhai Aghai           BR 7|Exception        |                     2|Domestic Individual|             25.00|                                             |
-F016583|7115822|FX Outgoing Wire (SafraLink) Fee|JH007  |              1|Bank Account Fees|    10.00|                                             |New York   |NY          |369      |Mordekhai Aghai           BR 7|Standard         |                     2|Domestic Individual|             10.00|                                             |
+import { FeeCase } from '#src/models/entities/FeeCase.js'
+import Result from '#features/shared/result.js'
+import {
+  connectToFeeMgmtDb,
+  executeStoreProcedure
+} from '#core/data/mssql/index.js'
+
+export default class FeeGetByCifUseCase {
+  async execute({ customerAccount }) {
+    global.logger.info('FeeGetByCifUseCase()')
+
+    const cifno = customerAccount[0].cifno
+
+    const result = {
+      customerName: '',
+      customerAddress: '',
+      customerAccountOfficer: '',
+      branchState: '',
+      feePackage: '',
+      defaultFeePackage: '',
+      cif: cifno,
+      fees: [],
+      feesActives: [],
+      documentUrl: '',
+      currentFees: []
+    }
+
+    // 📌 1️⃣ - Buscar os dados de Fees (Standard e Current)
+    const feesData = await this.#getFeesFromSQL(cifno)
+
+    if (feesData.length > 0) {
+      result.customerName = feesData[0].CustomerName
+      result.customerAddress = feesData[0].CustomerAddress
+      result.customerAccountOfficer = feesData[0].Officer
+      result.branchState = feesData[0].BranchState
+      result.feePackage = feesData[0].FeePackage
+      result.defaultFeePackage = feesData[0].DefaultFeePackageId
+    }
+
+    // 📌 2️⃣ - Identificar o Fee Package ID e buscar as Exception Fees
+    const feePackageId = feesData[0]?.DefaultFeePackageId || null
+    const exceptionData = feePackageId
+      ? await this.#getExceptionFeesFromSQL(feePackageId)
+      : []
+
+    // 📌 3️⃣ - Organizar os dados no JSON esperado pelo frontend
+    result.fees = this.#mapFeesByCategory(feesData, exceptionData)
+
+    // 📌 4️⃣ - Buscar Fees Ativos (Casos Pendentes)
+    const feesActives = await FeeCase.find({
+      cif: cifno,
+      status: { $nin: ['DONE', 'REJECTED'] },
+      caseNumber: { $exists: true }
+    })
+
+    result.feesActives = feesActives.map((x) => ({
+      caseNumber: x.caseNumber,
+      id: x.id
+    }))
+
+    // 📌 5️⃣ - Determinar a URL do Documento baseado no Fee Package
+    result.documentUrl = this.#getDocumentUrl(feePackageId)
+
+    // 📌 6️⃣ - Mapear o "currentFees"
+    result.currentFees = this.#mapCurrentFees(feesData)
+
+    return Result.ok(result)
+  }
+
+  /**
+   * 📌 1️⃣ Buscar Standard e Current Fees do SQL
+   */
+  async #getFeesFromSQL(cifno) {
+    global.logger.info('getFeesFromSQL()')
+    const connection = await connectToFeeMgmtDb()
+    return await executeStoreProcedure(connection, 'sp_get_fees_byCIF', { cifno })
+  }
+
+  /**
+   * 📌 2️⃣ Buscar Exception Fees por Fee Package
+   */
+  async #getExceptionFeesFromSQL(feePackageId) {
+    global.logger.info('getExceptionFeesFromSQL()')
+
+    const connection = await connectToFeeMgmtDb()
+    return await executeStoreProcedure(connection, 'sp_get_exception_fees_bypackage', { feePackageId })
+  }
+
+  /**
+   * 📌 3️⃣ Organiza os Fees (Standard, Current, Exception)
+   */
+  #mapFeesByCategory(feesData, exceptionData) {
+    const mappedFees = []
+
+    feesData.forEach(record => {
+      const isException = record.StandardException === 'Exception'
+      const isCurrentClient = record.Amount > 0
+
+      const field = {
+        code: record.FeeCode,
+        name: record.FeeDescription,
+        defaultValue: record.DefaultFeeAmount || '',
+        isStandard: !isException,
+        isException: isException,
+        isCurrentClient: isCurrentClient,
+        labelValue: record.Amount ? `$${record.Amount}.00` : '',
+        exceptionOptions: isException ? this.#parseExceptionOptions(exceptionData, record) : []
+      }
+
+      let feeGroup = mappedFees.find(f => f.feeType === record.FeeType)
+      if (!feeGroup) {
+        feeGroup = { feeType: record.FeeType, feeGroups: [] }
+        mappedFees.push(feeGroup)
+      }
+
+      let targetGroup
+      if (isException) {
+        targetGroup = feeGroup.feeGroups.find(g => g.name === 'Exception Request')
+        if (!targetGroup) {
+          targetGroup = { name: 'Exception Request', fields: [] }
+          feeGroup.feeGroups.push(targetGroup)
+        }
+      } else if (isCurrentClient) {
+        targetGroup = feeGroup.feeGroups.find(g => g.name === 'Client Current Fees')
+        if (!targetGroup) {
+          targetGroup = { name: 'Client Current Fees', fields: [] }
+          feeGroup.feeGroups.push(targetGroup)
+        }
+      } else {
+        targetGroup = feeGroup.feeGroups.find(g => g.name === 'Standard Fees')
+        if (!targetGroup) {
+          targetGroup = { name: 'Standard Fees', fields: [] }
+          feeGroup.feeGroups.push(targetGroup)
+        }
+      }
+
+      targetGroup.fields.push(field)
+    })
+
+    return mappedFees
+  }
+
+  /**
+   * 📌 4️⃣ Converte ExceptionOptions para o formato correto
+   */
+  #parseExceptionOptions(exceptionData, record) {
+    return exceptionData
+      .filter(exc => exc.FeeCode === record.FeeCode)
+      .map(exc => ({
+        value: exc.Amount,
+        text: `$${exc.Amount}.00`,
+        visible: true,
+        retired: false
+      }))
+  }
+
+  /**
+   * 📌 5️⃣ Determina a URL do Documento baseado no Fee Package
+   */
+  #getDocumentUrl(feePackageId) {
+    const scheduleUrls = global.environment.scheduleUrls
+
+    const packageMap = {
+      1: 'intlPB3',
+      2: 'uSPBIndividual3',
+      3: 'uSPBCorporation3',
+      4: 'efraPB3',
+      5: 'eraPB3'
+    }
+
+    const scheduleType = packageMap[feePackageId] || 'intlPB3' // Default para `intlPB3`
+    
+    return scheduleUrls[scheduleType] || ''
+  }
+
+  /**
+   * 📌 6️⃣ Mapear os valores de "currentFees"
+   */
+  #mapCurrentFees(feesData) {
+    return feesData
+      .filter(record => record.Amount > 0)
+      .map(record => ({
+        feeDescription: `${record.FeeDescription} - $${record.Amount}.00`,
+        feeCode: `${record.FeeType} ${record.ACCTNO}`
+      }))
+  }
+}
