--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,16 @@
-  {
-    CustomerName: 'UUUU UUUUUU                             ',
-    CustomerShortName: 'UUUUUU UUUU         ',
-    CustomerAddress: '2417 Tongass Ave #111                    UUU UUUU UU 44444                       ',
-    CIFNO: 'F016583',
-    ACCTNO: 7115342,
-    FeeDescription: 'FX Outgoing Wire (SafraLink) Fee',
-    FeeCode: 'JH007',
-    Istransactional: true,
-    FeeType: 'Bank Account Fees',
-    FeeAmount: 10,
-    Frequency: null,
-    'Branch City': 'New York',
-    'Branch State': 'NY',
-    OfficerId: '369   ',
-    Officer: 'Mordekhai Aghai           BR 7',
-    StandardException: 'Standard',
-    'Default Fee Package Id': 2,
-    'Default Fee Package': 'Domestic Individual',
-    'Default Fee Amount': 10,
-    'Default Frequency': null
-  },
+const result = {
+  cif: cifno,
+  customerName: feesData[0]?.CustomerName?.trim() || '', 
+  customerShortName: feesData[0]?.CustomerShortName?.trim() || '', 
+  customerAddress: feesData[0]?.CustomerAddress?.trim() || '',
+  customerAccountOfficer: feesData[0]?.Officer?.trim() || '',
+  officerId: feesData[0]?.OfficerId?.trim() || '',
+  branchCity: feesData[0]?.['Branch City']?.trim() || '',
+  branchState: feesData[0]?.['Branch State']?.trim() || '',
+  feePackage: feesData[0]?.['Default Fee Package']?.trim() || '',
+  defaultFeePackageId: feesData[0]?.['Default Fee Package Id'] || '',
+  fees: this.#mapFeesByCategory(feesData, exceptionData),
+  feesActives: await this.#getActiveFees(cifno),
+  documentUrl: this.#getDocumentUrl(feePackageId),
+  currentFees: this.#mapCurrentFees(feesData)
+};
