--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,118 @@
-const result = {
-  cif: feesData[0]?.CIFNO?.trim() || cifno, // Mantendo compatibilidade com conductor
-  customerName: feesData[0]?.CustomerName?.trim() || '', 
-  customerShortName: feesData[0]?.CustomerShortName?.trim() || '', 
-  customerAddress: feesData[0]?.CustomerAddress?.trim() || '',
-  customerAccountOfficer: feesData[0]?.Officer?.trim() || '',
-  officerId: feesData[0]?.OfficerId?.trim() || '',
-  branchCity: feesData[0]?.['Branch City']?.trim() || feesData[0]?.branchCity?.trim() || '',
-  branchState: feesData[0]?.['Branch State']?.trim() || feesData[0]?.branchState?.trim() || '',
-  feePackage: feesData[0]?.['Default Fee Package']?.trim() || feesData[0]?.feePackage?.trim() || '',
-  defaultFeePackageId: feesData[0]?.['Default Fee Package Id'] || feesData[0]?.defaultFeePackageId || '',
+import dotenv from 'dotenv'
+import path from 'path'
+import fs from 'fs'
+import configServer from 'nice-cloud-config-client'
 
-  fees: feesData?.fees || this.#mapFeesByCategory(feesData, exceptionData),
-  feesActives: feesData?.feesActives || await this.#getActiveFees(cifno),
+import environment from './environment.js'
+import { createLogger } from '#core/logging/index.js'
+import { configureEnvironmentConfigServer } from './configureEnvironment.js'
 
-  documentUrl: feesData?.documentUrl || this.#getDocumentUrl(feePackageId),
+export default class Config {
+  #env
+  #logger
 
-  currentFees: feesData?.currentFees || this.#mapCurrentFees(feesData)
+  constructor(env = process.env.NODE_ENV) {
+    this.#env = env || 'Local'
+    this.#logger = createLogger(environment)
+  }
+
+  async bootstrap() {
+    this.#logger.info(`Starting configuration for env: ${this.#env}`)
+
+    const strategies = new Map()
+    strategies.set('local', this.#loadEnvFromFile.bind(this))
+    strategies.set('development', this.#loadFromConfigServer.bind(this))
+    strategies.set('staging', this.#loadFromConfigServer.bind(this))
+    strategies.set('production', this.#loadFromConfigServer.bind(this))
+
+    const strategyForEnvironment = strategies.get(this.#env.toLocaleLowerCase())
+    const environmentWithValues = await strategyForEnvironment()
+
+    Object.freeze(environmentWithValues)
+
+    // Create a new logger using the final configuration
+    this.#logger = createLogger(environmentWithValues)
+
+    return environmentWithValues
+  }
+
+  logger() {
+    return this.#logger
+  }
+
+  async #loadEnvFromFile() {
+    const envFile = '.env'
+    const envPath = path.resolve(path.dirname(''), envFile)
+
+    this.#logger.info(`Loading env using file ${envPath}`)
+
+    if (fs.existsSync(envPath)) {
+      dotenv.config({ path: envPath })
+    }
+
+    environment.app.name = process.env.APP_NAME
+    environment.server.port = process.env.SERVER_PORT
+    environment.server.maxRequestBodySize =
+      process.env.SERVER_MAX_REQUEST_BODY_SIZE
+    environment.logging.level = process.env.LOGGING_LEVEL
+    environment.logging.file = process.env.LOGGING_FILE
+    environment.kafka.brokers = process.env.KAFKA_BROKERS?.split(',')
+    environment.rabbitmq.url = process.env.RABBITMQ_URL
+    environment.caseUrl = process.env.CASE_URL
+    environment.conductorUrl = process.env.CONDUCTOR_URL
+    environment.customerUrl = process.env.CUSTOMER_URL
+    environment.userUrl = process.env.CUSTOMER_URL
+    environment.feeUrl = process.env.FEE_URL
+    environment.notifyUrl = process.env.NOTIFY_URL
+    environment.jackUrl = process.env.JACK_URL
+
+    return environment
+  }
+
+  async #loadFromConfigServer() {
+    const configServerAppName = process.env.CONFIG_SERVER_APP_NAME
+    const configServerUrl = process.env.CONFIG_SERVER_URL
+    const configServerUser = process.env.CONFIG_SERVER_USER
+    const configServerPassword = process.env.CONFIG_SERVER_PASSWORD
+
+    if (!configServerAppName) {
+      throw new Error('Application name must be provided')
+    }
+
+    if (!configServerUrl) {
+      throw new Error('Config server url must be provided')
+    }
+
+    if (!configServerUser) {
+      throw new Error('Config server user must be provided')
+    }
+
+    if (!configServerPassword) {
+      throw new Error('Config server password must be provided')
+    }
+
+    this.#logger.info(`Loading env using config server ${configServerUrl}`)
+
+    const configuration = await configServer.load({
+      rejectUnauthorized: false,
+      name: configServerAppName,
+      endpoint: configServerUrl,
+      profiles: this.#env,
+      auth: {
+        user: configServerUser,
+        pass: configServerPassword
+      }
+    })
+
+    if (configuration instanceof Error) {
+      throw configuration
+    }
+
+    return configureEnvironmentConfigServer(
+      environment,
+      configuration.properties,
+      '.',
+      configuration
+    )
+  }
 }
